test/conformance/kuttl/generate/clusterpolicy/standard/data/sync/cpol-data-sync-delete-trigger/01-manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cpol-data-sync-delete-trigger-ns
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-org
  namespace: cpol-data-sync-delete-trigger-ns
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-create-on-trigger-deletion
spec:
  rules:
  - name: default-deny
    match:
      any:
      - resources:
          kinds:
          - ConfigMap
    generate:
      apiVersion: networking.k8s.io/v1
      kind: NetworkPolicy
      name: default-deny
      namespace: "{{request.object.metadata.namespace}}"
      synchronize: true
      data:
        spec:
          podSelector: {}
          policyTypes:
          - Ingress
          - Egress
