test/conformance/kuttl/generate/clusterpolicy/standard/data/sync/cpol-data-sync-delete-trigger/02-delete.yaml
# Specifying the kind as `TestStep` performs certain behaviors like this delete operation.
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
- apiVersion: v1
  kind: ConfigMap
  name: test-org
  namespace: cpol-data-sync-delete-trigger-ns
