test/conformance/kuttl/generate/clusterpolicy/standard/data/sync/cpol-data-sync-delete-trigger/01-assert.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: cpol-create-on-trigger-deletion
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-org
  namespace: cpol-data-sync-delete-trigger-ns
